# rust-cpp-sandbox

./: .gitignore  MODULE.bazel  NOTES.md  README.md  bazel-bin  bazel-out  bazel-rust-cpp-sandbox  bazel-testlogs
src/: BUILD.bazel  counter.cc  counter.h  device.cc  device.h  main.rs  rust_device.rs
