module(name = "rust-cpp-sandbox", version = "0.1.0")

# Core support for Rust and C++
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_cc", version = "0.0.9")

# The Native CXX Bazel Module (Bumped to a version that exists on the BCR)
bazel_dep(name = "cxx.rs", version = "1.0.192")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.85.0"],
)

# Initialize crate_universe (Keep this empty for future standard crates!)
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_specs()
use_repo(crate, "crates")